fix(cli.py): file path

--- a/results/ff3/FUSCCTNBC001.PAnno.html
+++ b/results/ff3/FUSCCTNBC001.PAnno.html
@@ -17,7 +17,7 @@
           <a href="#">
             <img src="https://raw.githubusercontent.com/premedkb/panno/main/docs/images/panno_icon.png" alt="PAnno">
             <br class="hidden-xs">
-            <small class="hidden-xs">v0.1.1</small>
+            <small class="hidden-xs">v0.1.2</small>
           </a>
         </h1>
           <li><a href="#pgx summary" class="nav-l1"><b>&nbsp;PGx Summary</b></a></li>
@@ -45,7 +45,7 @@
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p>Sample ID: FUSCCTNBC001<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Fri Jul 29 12:43:13 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: FUSCCTNBC001<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Fri Jul 29 14:18:25 2022</p>
     </blockquote>
     
 
@@ -288,7 +288,7 @@
 <h3><b>ABCG2: G/T</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Position</th><th width="120px">rsID</th><th width="200px">Effect on Protein</th><th width="275px">Definition of Alleles</th><th width="200px">Detected Alleles</th></tr>
-<tr><td>chr4:NC_000004.12:g.88131171G>T</td><td>rs2231142</td><td>p.Q141K</td><td>G:G; T:T</td><td>G|T</td></tr>
+<tr><td>chr4:NC_000004.12:g.88131171G>T</td><td>rs2231142</td><td>p.Q141K</td><td>T:T; G:G</td><td>G|T</td></tr>
 </table>
 <h3><b>CACNA1S: Reference/Reference</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
@@ -476,40 +476,40 @@
 <h3><b>CYP2C19: *1/*2</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Position</th><th width="120px">rsID</th><th width="200px">Effect on Protein</th><th width="275px">Definition of Alleles</th><th width="200px">Detected Alleles</th></tr>
-<tr><td>chr10:NC_000010.11:g.94761900C>T</td><td>rs12248560</td><td>p.expression</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762706A>G</td><td>rs28399504</td><td>p.M1V</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762712C>T</td><td>rs367543002</td><td>p.P3S</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762715T>C</td><td>rs367543003</td><td>p.F4L</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762755T>C</td><td>rs55752064</td><td>p.L17P</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762760A>C</td><td>rs17882687</td><td>p.I19L</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762788A>T</td><td>rs1564656981</td><td>p.K28I</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762856A>G</td><td>rs1564657013</td><td>p.S51G</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775106C>T</td><td>rs145328984</td><td>p.R73C</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775121C>T</td><td>rs1564660997</td><td>p.H78Y</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775160G>C</td><td>rs118203756</td><td>p.G91R</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775185A>G</td><td>rs1288601658</td><td>p.H99R</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775367A>G</td><td>rs12769205</td><td>splicing defect</td><td>*1:A; *2:G</td><td>A|G</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775416T>C</td><td>rs41291556</td><td>p.W120R</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775423A>C</td><td>rs17885179</td><td>p.E122A</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775453G>A</td><td>rs72552267</td><td>p.R132Q</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775489G>A</td><td>rs17884712</td><td>p.R144H</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775507G>A</td><td>rs58973490</td><td>p.R150H</td><td>*1:G; *2:R</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94780574G>C</td><td>rs140278421</td><td>p.R186P</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94780579G>A</td><td>rs370803989</td><td>p.D188N</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94780653G>A</td><td>rs4986893</td><td>p.W212X</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781858C>T</td><td>rs6413438</td><td>p.P227L</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781859G>A</td><td>rs4244285</td><td>splicing defect</td><td>*1:G; *2:A</td><td>G|A</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781944G>A</td><td>rs375781227</td><td>p.D256N</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781999T>A</td><td>rs72558186</td><td>splicing defect</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842861G>A</td><td>rs138142612</td><td>p.R329H</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842866A>G</td><td>rs3758581</td><td>p.I331V</td><td>*1:G; *2:G</td><td>G|G</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842879G>A</td><td>rs118203757</td><td>p.R335Q</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842995G>A</td><td>rs113934938</td><td>p.V374I</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94849995C>T</td><td>rs17879685</td><td>p.R410C</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852738C>T</td><td>rs56337013</td><td>p.R433W</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852765C>T</td><td>rs192154563</td><td>p.R442C</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852785C>G</td><td>rs118203759</td><td>p.F448L</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852914A>C</td><td>rs55640102</td><td>p.X491C</td><td>*1:A; *2:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94761900C>T</td><td>rs12248560</td><td>p.expression</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762706A>G</td><td>rs28399504</td><td>p.M1V</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762712C>T</td><td>rs367543002</td><td>p.P3S</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762715T>C</td><td>rs367543003</td><td>p.F4L</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762755T>C</td><td>rs55752064</td><td>p.L17P</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762760A>C</td><td>rs17882687</td><td>p.I19L</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762788A>T</td><td>rs1564656981</td><td>p.K28I</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762856A>G</td><td>rs1564657013</td><td>p.S51G</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775106C>T</td><td>rs145328984</td><td>p.R73C</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775121C>T</td><td>rs1564660997</td><td>p.H78Y</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775160G>C</td><td>rs118203756</td><td>p.G91R</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775185A>G</td><td>rs1288601658</td><td>p.H99R</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775367A>G</td><td>rs12769205</td><td>splicing defect</td><td>*2:G; *1:A</td><td>A|G</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775416T>C</td><td>rs41291556</td><td>p.W120R</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775423A>C</td><td>rs17885179</td><td>p.E122A</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775453G>A</td><td>rs72552267</td><td>p.R132Q</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775489G>A</td><td>rs17884712</td><td>p.R144H</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775507G>A</td><td>rs58973490</td><td>p.R150H</td><td>*2:R; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94780574G>C</td><td>rs140278421</td><td>p.R186P</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94780579G>A</td><td>rs370803989</td><td>p.D188N</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94780653G>A</td><td>rs4986893</td><td>p.W212X</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781858C>T</td><td>rs6413438</td><td>p.P227L</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781859G>A</td><td>rs4244285</td><td>splicing defect</td><td>*2:A; *1:G</td><td>G|A</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781944G>A</td><td>rs375781227</td><td>p.D256N</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781999T>A</td><td>rs72558186</td><td>splicing defect</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842861G>A</td><td>rs138142612</td><td>p.R329H</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842866A>G</td><td>rs3758581</td><td>p.I331V</td><td>*2:G; *1:G</td><td>G|G</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842879G>A</td><td>rs118203757</td><td>p.R335Q</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842995G>A</td><td>rs113934938</td><td>p.V374I</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94849995C>T</td><td>rs17879685</td><td>p.R410C</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852738C>T</td><td>rs56337013</td><td>p.R433W</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852765C>T</td><td>rs192154563</td><td>p.R442C</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852785C>G</td><td>rs118203759</td><td>p.F448L</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852914A>C</td><td>rs55640102</td><td>p.X491C</td><td>*2:A; *1:A</td><td>Missing</td></tr>
 </table>
 <h3><b>CYP2D6: *2/*10</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
@@ -1062,37 +1062,37 @@
 <h3><b>SLCO1B1: *15/*37</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Position</th><th width="120px">rsID</th><th width="200px">Effect on Protein</th><th width="275px">Definition of Alleles</th><th width="200px">Detected Alleles</th></tr>
-<tr><td>chr12:NC_000012.12:g.21172734C>T</td><td>rs139257324</td><td>p.R57W</td><td>*15:C; *37:C</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21172776G>A</td><td>rs373327528</td><td>p.G71R</td><td>*15:G; *37:G</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21172782T>C</td><td>rs56101265</td><td>p.F73L</td><td>*15:T; *37:T</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21174595T>C</td><td>rs56061388</td><td>p.V82A</td><td>*15:T; *37:T</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21176804A>G</td><td>rs2306283</td><td>p.N130D</td><td>*15:G; *37:G</td><td>G|G</td></tr>
-<tr><td>chr12:NC_000012.12:g.21176868A>G</td><td>rs2306282</td><td>p.N151S</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21176871G>A</td><td></td><td>p.R152L</td><td>*15:G; *37:G</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21176879C>A</td><td>rs11045819</td><td>p.P155T</td><td>*15:C; *37:C</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21176883A>G</td><td>rs72559745</td><td>p.E156G</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21176898G>T</td><td>rs77271279</td><td>splicing defect</td><td>*15:G; *37:G</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21178612A>G</td><td>rs141467543</td><td>p.Y173C</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21178615T>C</td><td>rs4149056</td><td>p.V174A</td><td>*15:C; *37:T</td><td>T|C</td></tr>
-<tr><td>chr12:NC_000012.12:g.21178957A>G</td><td>rs79135870</td><td>p.I222V</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21196951A>G</td><td>rs11045852</td><td>p.I245V</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21196975C>T</td><td>rs183501729</td><td>p.R253X</td><td>*15:C; *37:C</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21196976G>A</td><td>rs11045853</td><td>p.R253Q</td><td>*15:G; *37:G</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21200544C>G</td><td>rs72559747</td><td>p.P336R</td><td>*15:C; *37:C</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21200595T>C</td><td>rs55901008</td><td>p.I353T</td><td>*15:T; *37:T</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21202553T>G</td><td>rs1228465562</td><td>p.F400V</td><td>*15:T; *37:T</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21202555C>G</td><td>rs59113707</td><td>p.F400L</td><td>*15:C; *37:C</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21202649A>G</td><td>rs56387224</td><td>p.N432D</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21202664G>A</td><td>rs142965323</td><td>p.G437R</td><td>*15:G; *37:G</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21205921A>G</td><td>rs72559748</td><td>p.D462G</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21205999G>C</td><td>rs59502379</td><td>p.G488A</td><td>*15:G; *37:G</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21206031A>G</td><td>rs74064213</td><td>p.I499V</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21222355C>T</td><td>rs71581941</td><td>p.R580X</td><td>*15:C; *37:C</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21239042A>C</td><td>rs34671512</td><td>p.L643F</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21239077A>G</td><td>rs56199088</td><td>p.D655G</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21239113A>G</td><td>rs55737008</td><td>p.E667G</td><td>*15:A; *37:A</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21239145C>T</td><td>rs200995543</td><td>p.H678Y</td><td>*15:C; *37:C</td><td>Missing</td></tr>
-<tr><td>chr12:NC_000012.12:g.21239158C>T</td><td>rs140790673</td><td>p.S682F</td><td>*15:C; *37:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21172734C>T</td><td>rs139257324</td><td>p.R57W</td><td>*37:C; *15:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21172776G>A</td><td>rs373327528</td><td>p.G71R</td><td>*37:G; *15:G</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21172782T>C</td><td>rs56101265</td><td>p.F73L</td><td>*37:T; *15:T</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21174595T>C</td><td>rs56061388</td><td>p.V82A</td><td>*37:T; *15:T</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21176804A>G</td><td>rs2306283</td><td>p.N130D</td><td>*37:G; *15:G</td><td>G|G</td></tr>
+<tr><td>chr12:NC_000012.12:g.21176868A>G</td><td>rs2306282</td><td>p.N151S</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21176871G>A</td><td></td><td>p.R152L</td><td>*37:G; *15:G</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21176879C>A</td><td>rs11045819</td><td>p.P155T</td><td>*37:C; *15:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21176883A>G</td><td>rs72559745</td><td>p.E156G</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21176898G>T</td><td>rs77271279</td><td>splicing defect</td><td>*37:G; *15:G</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21178612A>G</td><td>rs141467543</td><td>p.Y173C</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21178615T>C</td><td>rs4149056</td><td>p.V174A</td><td>*37:T; *15:C</td><td>T|C</td></tr>
+<tr><td>chr12:NC_000012.12:g.21178957A>G</td><td>rs79135870</td><td>p.I222V</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21196951A>G</td><td>rs11045852</td><td>p.I245V</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21196975C>T</td><td>rs183501729</td><td>p.R253X</td><td>*37:C; *15:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21196976G>A</td><td>rs11045853</td><td>p.R253Q</td><td>*37:G; *15:G</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21200544C>G</td><td>rs72559747</td><td>p.P336R</td><td>*37:C; *15:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21200595T>C</td><td>rs55901008</td><td>p.I353T</td><td>*37:T; *15:T</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21202553T>G</td><td>rs1228465562</td><td>p.F400V</td><td>*37:T; *15:T</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21202555C>G</td><td>rs59113707</td><td>p.F400L</td><td>*37:C; *15:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21202649A>G</td><td>rs56387224</td><td>p.N432D</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21202664G>A</td><td>rs142965323</td><td>p.G437R</td><td>*37:G; *15:G</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21205921A>G</td><td>rs72559748</td><td>p.D462G</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21205999G>C</td><td>rs59502379</td><td>p.G488A</td><td>*37:G; *15:G</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21206031A>G</td><td>rs74064213</td><td>p.I499V</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21222355C>T</td><td>rs71581941</td><td>p.R580X</td><td>*37:C; *15:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21239042A>C</td><td>rs34671512</td><td>p.L643F</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21239077A>G</td><td>rs56199088</td><td>p.D655G</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21239113A>G</td><td>rs55737008</td><td>p.E667G</td><td>*37:A; *15:A</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21239145C>T</td><td>rs200995543</td><td>p.H678Y</td><td>*37:C; *15:C</td><td>Missing</td></tr>
+<tr><td>chr12:NC_000012.12:g.21239158C>T</td><td>rs140790673</td><td>p.S682F</td><td>*37:C; *15:C</td><td>Missing</td></tr>
 </table>
 <h3><b>TPMT: *1/*1</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
@@ -1279,7 +1279,7 @@
     <div class="footer">
       <p>
         <strong>
-          <a href="https://github.com/PreMedKB/PAnno" target="_blank">PAnno v0.1.1</a>
+          <a href="https://github.com/PreMedKB/PAnno" target="_blank">PAnno v0.1.2</a>
         </strong>
         - Written by Yaqing Liu, et al.,
         available at <a href="https://github.com/PreMedKB/PAnno" target="_blank">GitHub</a>, 
