--- a/results/ff4/FUSCCTNBC001.PAnno.html
+++ b/results/ff4/FUSCCTNBC001.PAnno.html
@@ -17,7 +17,7 @@
           <a href="#">
             <img src="https://raw.githubusercontent.com/premedkb/panno/main/docs/images/panno_icon.png" alt="PAnno">
             <br class="hidden-xs">
-            <small class="hidden-xs">v0.1.1</small>
+            <small class="hidden-xs">v0.1.2</small>
           </a>
         </h1>
           <li><a href="#pgx summary" class="nav-l1"><b>&nbsp;PGx Summary</b></a></li>
@@ -45,7 +45,7 @@
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p>Sample ID: FUSCCTNBC001<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Fri Jul 29 12:43:13 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: FUSCCTNBC001<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Fri Jul 29 14:24:41 2022</p>
     </blockquote>
     
 
@@ -476,40 +476,40 @@
 <h3><b>CYP2C19: *1/*2</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Position</th><th width="120px">rsID</th><th width="200px">Effect on Protein</th><th width="275px">Definition of Alleles</th><th width="200px">Detected Alleles</th></tr>
-<tr><td>chr10:NC_000010.11:g.94761900C>T</td><td>rs12248560</td><td>p.expression</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762706A>G</td><td>rs28399504</td><td>p.M1V</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762712C>T</td><td>rs367543002</td><td>p.P3S</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762715T>C</td><td>rs367543003</td><td>p.F4L</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762755T>C</td><td>rs55752064</td><td>p.L17P</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762760A>C</td><td>rs17882687</td><td>p.I19L</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762788A>T</td><td>rs1564656981</td><td>p.K28I</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94762856A>G</td><td>rs1564657013</td><td>p.S51G</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775106C>T</td><td>rs145328984</td><td>p.R73C</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775121C>T</td><td>rs1564660997</td><td>p.H78Y</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775160G>C</td><td>rs118203756</td><td>p.G91R</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775185A>G</td><td>rs1288601658</td><td>p.H99R</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775367A>G</td><td>rs12769205</td><td>splicing defect</td><td>*1:A; *2:G</td><td>A|G</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775416T>C</td><td>rs41291556</td><td>p.W120R</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775423A>C</td><td>rs17885179</td><td>p.E122A</td><td>*1:A; *2:A</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775453G>A</td><td>rs72552267</td><td>p.R132Q</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775489G>A</td><td>rs17884712</td><td>p.R144H</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94775507G>A</td><td>rs58973490</td><td>p.R150H</td><td>*1:G; *2:R</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94780574G>C</td><td>rs140278421</td><td>p.R186P</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94780579G>A</td><td>rs370803989</td><td>p.D188N</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94780653G>A</td><td>rs4986893</td><td>p.W212X</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781858C>T</td><td>rs6413438</td><td>p.P227L</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781859G>A</td><td>rs4244285</td><td>splicing defect</td><td>*1:G; *2:A</td><td>G|A</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781944G>A</td><td>rs375781227</td><td>p.D256N</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94781999T>A</td><td>rs72558186</td><td>splicing defect</td><td>*1:T; *2:T</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842861G>A</td><td>rs138142612</td><td>p.R329H</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842866A>G</td><td>rs3758581</td><td>p.I331V</td><td>*1:G; *2:G</td><td>G|G</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842879G>A</td><td>rs118203757</td><td>p.R335Q</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94842995G>A</td><td>rs113934938</td><td>p.V374I</td><td>*1:G; *2:G</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94849995C>T</td><td>rs17879685</td><td>p.R410C</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852738C>T</td><td>rs56337013</td><td>p.R433W</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852765C>T</td><td>rs192154563</td><td>p.R442C</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852785C>G</td><td>rs118203759</td><td>p.F448L</td><td>*1:C; *2:C</td><td>Missing</td></tr>
-<tr><td>chr10:NC_000010.11:g.94852914A>C</td><td>rs55640102</td><td>p.X491C</td><td>*1:A; *2:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94761900C>T</td><td>rs12248560</td><td>p.expression</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762706A>G</td><td>rs28399504</td><td>p.M1V</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762712C>T</td><td>rs367543002</td><td>p.P3S</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762715T>C</td><td>rs367543003</td><td>p.F4L</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762755T>C</td><td>rs55752064</td><td>p.L17P</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762760A>C</td><td>rs17882687</td><td>p.I19L</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762788A>T</td><td>rs1564656981</td><td>p.K28I</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94762856A>G</td><td>rs1564657013</td><td>p.S51G</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775106C>T</td><td>rs145328984</td><td>p.R73C</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775121C>T</td><td>rs1564660997</td><td>p.H78Y</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775160G>C</td><td>rs118203756</td><td>p.G91R</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775185A>G</td><td>rs1288601658</td><td>p.H99R</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775367A>G</td><td>rs12769205</td><td>splicing defect</td><td>*2:G; *1:A</td><td>A|G</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775416T>C</td><td>rs41291556</td><td>p.W120R</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775423A>C</td><td>rs17885179</td><td>p.E122A</td><td>*2:A; *1:A</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775453G>A</td><td>rs72552267</td><td>p.R132Q</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775489G>A</td><td>rs17884712</td><td>p.R144H</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94775507G>A</td><td>rs58973490</td><td>p.R150H</td><td>*2:R; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94780574G>C</td><td>rs140278421</td><td>p.R186P</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94780579G>A</td><td>rs370803989</td><td>p.D188N</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94780653G>A</td><td>rs4986893</td><td>p.W212X</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781858C>T</td><td>rs6413438</td><td>p.P227L</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781859G>A</td><td>rs4244285</td><td>splicing defect</td><td>*2:A; *1:G</td><td>G|A</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781944G>A</td><td>rs375781227</td><td>p.D256N</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94781999T>A</td><td>rs72558186</td><td>splicing defect</td><td>*2:T; *1:T</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842861G>A</td><td>rs138142612</td><td>p.R329H</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842866A>G</td><td>rs3758581</td><td>p.I331V</td><td>*2:G; *1:G</td><td>G|G</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842879G>A</td><td>rs118203757</td><td>p.R335Q</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94842995G>A</td><td>rs113934938</td><td>p.V374I</td><td>*2:G; *1:G</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94849995C>T</td><td>rs17879685</td><td>p.R410C</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852738C>T</td><td>rs56337013</td><td>p.R433W</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852765C>T</td><td>rs192154563</td><td>p.R442C</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852785C>G</td><td>rs118203759</td><td>p.F448L</td><td>*2:C; *1:C</td><td>Missing</td></tr>
+<tr><td>chr10:NC_000010.11:g.94852914A>C</td><td>rs55640102</td><td>p.X491C</td><td>*2:A; *1:A</td><td>Missing</td></tr>
 </table>
 <h3><b>CYP2D6: *2/*10</b></h3>
 <table id="customer_table" border="1" cellspacing="0">
@@ -1279,7 +1279,7 @@
     <div class="footer">
       <p>
         <strong>
-          <a href="https://github.com/PreMedKB/PAnno" target="_blank">PAnno v0.1.1</a>
+          <a href="https://github.com/PreMedKB/PAnno" target="_blank">PAnno v0.1.2</a>
         </strong>
         - Written by Yaqing Liu, et al.,
         available at <a href="https://github.com/PreMedKB/PAnno" target="_blank">GitHub</a>, 
